# geocaret

./: .buildinfo  .gitignore  99_output_specification.rst  CITATION.cff  CITATIONS.md  Dockerfile  MANIFEST.in  README.Docker-build.md  README.Docker.md  README.md  acknowledgments.html  algorithms.html  compose.yml  config.html  environment.md  genindex.html  geocaret_cli.py  geocaret_export_cli.py  heet_cli.py  heet_export_cli.py  index.html  introduction.html  license.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  requirements_doc.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: basic-manual.yml  build.yml  main.yml  manual.yml
_sources/ghg_emissions/: gis_assets.rst.txt  koppen_codes.rst.txt
_sources/installation/: building_image.rst.txt  install_package.rst.txt  using_docker.rst.txt  using_image.rst.txt
_static/: references.bib
api/: geocaret.html
config/: assets.toml
data/: README.md  dams.csv  dams_backup.csv
delineator/: __init__.py  heet_basins.py  heet_catchment.py  heet_config.py  heet_data.py  heet_export.py  heet_log.py  heet_monitor.py  heet_params.py  heet_reservoir.py  heet_river.py  heet_snap.py  heet_task.py  heet_validate.py  ht_delete.py  lib.py  uihi_watershed.py
docs/: 01_install.md  01_prerequisites.md  02_input_data.md  02_install.md  03_input_data.md  03_run.md  04A_output_data.md  04B_gis_layers.md  04_output_data.md  04_run.md  05A_output_data.md  05B_gis_layers.md  05_calculations_alt.md  06_calculations_alt.md  06_limitations.md  07_config.md  99_gis_layer_metadata.csv  99_koppen_codes.md  99_output_specification.csv  99_private_assets.md  acknowledgments.rst  algorithms.rst  conf.py  config.rst  convert_all.sh  gis_layers.rst  index.rst  input_data.rst  introduction.rst  license.rst  merge_files.sh  output_data.rst
draft/: gis.py  heet_gis.py  heet_params_draft.py  params_draft.py  test_params_draft.py
ghg_emissions/: alternative_outputs.html  gis_assets.html  index.html  input_data.html  koppen_codes.html  limitations.html  output_data.html  output_data_exports.html
installation/: access_to_assets.html  account_setup.html  additional_steps.html  building_image.html  index.html  install_package.html  using_docker.html  using_image.html
running_geocaret/: first_run.html  index.html  running_docker.html  running_python_package.html
tests/: README.md  __init__.py  conftest.py  fixtures.py  helper.py  test_basins.py  test_calcs.py  test_codes.py  test_dams.py  test_delineation_reservoir.py  test_delineation_river.py  test_earthengine.py  test_gres.py  test_internet.py  test_params.py  test_params_elev.py  test_params_landcover.py  test_params_misc.py  test_params_smap.py  test_params_soil.py  test_params_terraclimate.py  test_params_utils.py  test_renderer.py  test_snap.py  test_validate.py
utils/: inputs.resource.yaml  outputs.resource.yaml
(+203 files in other folders)
