[build-system]
requires = ["setuptools>=30.3.0", "wheel"]#, "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = true

[pydocstyle]
inherit = false
match = '*.py'

[project]
name = "geocaret"
version = "2.0.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=append",
]
pythonpath = "src"
log_cli=true  
log_level="INFO"
log_format="%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"


# pyproject.toml
#[tool.setuptools_scm]
