[metadata]
license = GPL3.0 License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GPL3.0 License
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = reservoirs, catchments, earth engine, gis
url = https://github.com/Reservoir-Research/geocaret
project_urls =
    Documentation = https://reservoir-research.github.io/geocaret/
    Source Code = https://github.com/Reservoir-Research/geocaret
    Bug Tracker = https://github.com/Reservoir-Research/geocaret/issues
    Changelog = https://reemission.readthedocs.io/en/latest/changelog.html

[options]
python_requires = >=3.6
install_requires =
    click
    numpy

[options.extras_require]
dev =
    pytest
    unittest2
    coverage
    check-manifest

lint =
    flake8
    pylint

docs =
    nbsphinx
    sphinx-copybutton
    sphinx-math-dollar
    sphinx-tabs
    sphinx-toggleprompt
    sphinxawesome-theme
    sphinxcontrib-applehelp
    sphinxcontrib-bibtex
    sphinxcontrib-devhelp
    sphinxcontrib-htmlhelp
    sphinxcontrib-jquery
    sphinxcontrib-jsmath
    sphinxcontrib-napoleon
    sphinxcontrib-pdfembed
    sphinxcontrib-qthelp
    sphinxcontrib-serializinghtml

[options.entry_points]
console_scripts=
    geocaret=geocaret.cli.cli:main
    geocaret-export=geocaret.integration.cli.cli:geocaret_integrate

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
pretty = True
show_error_codes = True

[pydocstyle]
inherit = false
ignore = D100, D203, D405, D212, D213
match = .*\.py

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = geocaret
default_section = THIRDPARTY
forced_separate = test_geocaret
skip = .tox,.eggs,ci/templates,build,dist
